# nba-seasons

./: .gitignore  build.sh  pyproject.toml
.github/workflows/: ci.yaml
documentation/Charlotte Hornets/Bobcats Sports & Entertainment Applies to Change Team’s Name to Hornets/: content.html  relevant facts  source
documentation/Charlotte Hornets/Charlotte Hornets/: relevant facts  source
documentation/Charlotte Hornets/Charlotte Hornets Name Returns to Carolinas/: content.html  relevant facts  source
documentation/NATIONAL BASKETBALL ASSOCIATION CONSTITUTION AND BY-LAWS/2019/09/: relevant facts  source
documentation/New Orleans Pelicans/: New Orleans Pelicans.md
documentation/New Orleans Pelicans/Effect of Hurricane Katrina on the New Orleans Hornets/: relevant facts  source
nba_seasons/: main.py
nba_seasons/calculators/: python.py  test_python.py
nba_seasons/data/output/: National Basketball Association.yaml
nba_seasons/models/: basketball_reference.py  calendar.py  iso_8601.py  math.py  strings.py  test.py  test_models.py
nba_seasons/parsing/: seasons.py
nba_seasons/parsing/com/basketball_reference/: franchises.py  models.py  seasons.py  test_franchises.py  test_seasons.py
nba_seasons/parsing/com/nba/: franchises.py  test_franchises.py
nba_seasons/translators/com/basketball_reference/: franchise.py  league.py  records.py  test_records.py
nba_seasons/writers/clients/: python.py
nba_seasons/writers/com/basketball_reference/: seasons.py  test_models.py
src/: main.py
src/data/output/: National Basketball Association.yaml
(+116 files in other folders)
