[tool.poetry]
name = "nba-seasons"
version = "0.1.0"
description = ""
authors = ["Jae Bradley <jae.b.bradley@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nba_seasons"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
